- favorite chooser toggle button text based on status - on demand loading comment (when visible) - fix bug in response-service.( intersection-observer API changes)

--- a/src/app/home/play-episode/comment/comment.less
+++ b/src/app/home/play-episode/comment/comment.less
@@ -3,6 +3,12 @@ bangumi-comment {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  .comment-loading-container {
+    display: block;
+    position: relative;
+    width: 100%;
+    height: 30rem;
+  }
   .comment-container.ui.comments {
     max-width: 100%;
     .ui.dividing.header {
